--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "m2-d09-lab-exp-ssr-rooms-with-reviews-pilauria",
+  "name": "project2-template",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon --ext html,js,css,hbs ./bin/www"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "axios": "^0.24.0",
+    "axios": "^0.21",
     "bcrypt": "^5",
-    "connect-mongo": "^4.6.0",
-    "cookie-parser": "^1.4.6",
+    "cloudinary": "^1",
+    "connect-mongo": "^4",
+    "cookie-parser": "^1",
     "dotenv": "^10",
-    "express": "~4.16.1",
-    "express-session": "^1.17.2",
-    "hbs": "^4.2.0",
-    "http-errors": "~1.6.3",
-    "mongoose": "^6",
-    "morgan": "~1.9.1",
-    "serve-favicon": "^2.5.0"
+    "express": "^4",
+    "express-session": "^1",
+    "hbs": "^4",
+    "http-errors": "^1",
+    "mongoose": "^5",
+    "morgan": "^1",
+    "multer": "^1",
+    "multer-storage-cloudinary": "^4",
+    "serve-favicon": "^2"
   },
   "devDependencies": {
-    "debug": "~2.6.9",
+    "debug": "^2",
     "nodemon": "^2"
   }
 }
