--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "axios": "^0.21",
     "bcrypt": "^5",
     "cloudinary": "^1",
