--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "^0.21",
     "bcrypt": "^5",
-    "cloudinary": "^1",
+    "cloudinary": "^1.27.1",
     "connect-mongo": "^4",
     "cookie-parser": "^1",
     "dotenv": "^10",
@@ -22,6 +22,7 @@
     "morgan": "^1",
     "multer": "^1",
     "multer-storage-cloudinary": "^4",
+    "node-fetch": "^3.1.0",
     "serve-favicon": "^2"
   },
   "devDependencies": {
