login-signup-logout

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGODB_URI=mongodb+srv://pilauria:CtbSHUys2yPQlyxW@cluster0.q3aua.mongodb.net/p
 PORT=3000
 memeURL=https://api.imgflip.com/get_memes
 createURL=https://api.imgflip.com/caption_image
+SESSION_SECRET=Globtrotters-secret
