--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www -L"
+    "dev": "nodemon --ext html,css,js,hbs ./bin/www -L"
   },
   "dependencies": {
     "axios": "^0.21",
