--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ PORT=3000
 memeURL=https://api.imgflip.com/get_memes
 createURL=https://api.imgflip.com/caption_image
 SESSION_SECRET=Globtrotters-secret
+API_USER=bering20;
+API_PASSWORD=ironhack;
+
