--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-mongo": "^4",
     "cookie-parser": "^1",
     "dotenv": "^10",
+    "ember-truth-helpers": "^3.0.0",
     "express": "^4",
     "express-session": "^1.17.2",
     "hbs": "^4",
